package com.adrenalinici.adrenaline.gui.controller;

public class startGuiController {
}
